--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Information Retrieval Model",
+  "name": "Information-Retrieval-Model",
   "version": "1.0.0",
   "description": "A basic search engine made from scratch",
   "main": "server/main.js",
@@ -45,6 +45,8 @@
     "babel-preset-react": "^6.22.0",
     "chai": "3.5.0",
     "chai-spies": "0.7.1",
+    "chai-properties": "^1.2.1",
+    "chai-things": "^0.2.0",
     "mocha": "^2.5.1",
     "webpack": "^2.2.1"
   }
