--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "chai": "3.5.0",
-    "chai-spies": "0.7.1",
     "chai-properties": "^1.2.1",
+    "chai-spies": "0.7.1",
     "chai-things": "^0.2.0",
     "mocha": "^2.5.1",
+    "supertest": "^3.0.0",
     "webpack": "^2.2.1"
   }
 }
